Import of EALLENIII/Music-Tag-MP3-0.29 from CPAN.
gitpan-cpan-distribution: Music-Tag-MP3
gitpan-cpan-version:      0.29
gitpan-cpan-path:         EALLENIII/Music-Tag-MP3-0.29.tar.gz
gitpan-cpan-author:       EALLENIII
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -43,6 +43,12 @@ Then install as normal
    make && make test
    make install
 
+NOTE ON GAPLESS INFO
+
+This is used for a yet-to-be-maybe-someday released ipod library.  It collects
+the required gapless info.  There is a patch to MP3-Info that should be applied
+ONLY if you are interested in experimenting with this.  
+
 TEST FILES
 
 Are based on the sample file for Audio::M4P.  For testing only.
