--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+Release Name: 0.29
+============================
+* Kwalitee fixes
+* Added Music::Info patch and explanation about gapless data
+
+Release Name: 0.28
+============================
+* Split from Music::Tag
+
 Release Name: 0.27
 ============================
 * More documentation and tested POD. 
