Import of EALLENIII/Music-Tag-MP3-0.4001 from CPAN.
gitpan-cpan-distribution: Music-Tag-MP3
gitpan-cpan-version:      0.4001
gitpan-cpan-path:         EALLENIII/Music-Tag-MP3-0.4001.tar.gz
gitpan-cpan-author:       EALLENIII
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,17 @@
+CHANGES
+	Release Name: 0.40_01
+		*	Started using git and github
+
+		*	Normalized version accross plugins
+
+		*	POD Changes
+
+		*	Revised Testing 
+
+		*	Capability Methods
+
+		*	Started using hash tables for tags, simplifying code and testing.
+
     Release Name: 0.32
         *   Changed to TXXX:ALBUMARTISTSORT from TXXX:MusicBrainz Album
             Artist Sortname (will still read both). This is to partially
